# crypto-agent

./: LICENSE  README.rst
cryptoenv/: activate_env.sh  pyproject.toml
cryptoenv/crypto/: __init__.py
cryptoenv/crypto/abstract/: __init__.py  simulation_task.py  simulation_task_no_normalize.py  strategy.py
cryptoenv/crypto/core/: __init__.py  core.py
cryptoenv/crypto/envs/: __init__.py  env_api.py  env_manager.py
cryptoenv/crypto/envs/strategy/: __init__.py  basic.py
cryptoenv/crypto/envs/tasks/: __init__.py  month_evaluation_no_volume.py  month_evaluation_opportunity_loss_on_hold.py  month_evaluation_opportunity_loss_on_hold_no_normalize.py
cryptoenv/tests/: test_cryptoenv.py
engine/: activate_env.sh  pyproject.toml
engine/engine/: delegator.py  evaluator.py  runner.py
engine/engine/config/envs/: btc_month_eval.yml
engine/engine/utils/common/: methods.py
engine/tests/: test_engine.py
scraper/: activate_env.sh  pyproject.toml
scraper/scraper/: __init__.py
scraper/scraper/extractor/: __init__.py  crypto_extractor.py
scraper/scraper/iterator/: __init__.py  data_iterator.py
scraper/scraper/utils/common/: constants.py
scraper/tests/: test_scraper.py
