[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Jamie Chojnacki <chojnacki.jamie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.5"
black = "^22.12.0"
attrs = "^22.2.0"
click = "^8.1.3"
PyYAML = "^6.0"
pynvim = "^0.4.3"
pre-commit = "^2.21.0"
scraper = { path = "../scraper/", develop = true }
gymnasium = "0.26.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
