[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["Jamie Chojnacki <chojnacki.jamie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
crypto = { path = "../cryptoenv/", develop = true }
pre-commit = "^2.20.0"
pip = "^22.3.1"
ray = {extras = ["rllib"], version = "2.3.0"}
torch = "^1.13.1"
pygame = "^2.1.2"
wandb = "^0.13.9"
tensorboard = "^2.11.2"
tensorflow-probability = "^0.19.0"
tensorboardx = "^2.6"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.12.0+cu113 torchvision==0.13.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html"
