[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Jamie Chojnacki <chojnacki.jamie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.2"
pre-commit = "^2.20.0"
black = "^22.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
